pleased align correctly now

--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ p{
 	font-weight: lighter;
 	font-size:18pt;
 	text-align: left;
-	margin-left:4%;
+	margin-left:6em;
 	margin-right: 15%;
 
 
